<resources>
    <string name="app_name">CallServices</string>
    <string name="action_settings">Settings</string>


    <string name="fragment_login_user">Usuario:</string>
    <string name="fragment_login_user_hint">Ingresar usuario</string>
    <string name="fragment_login_password">Password:</string>
    <string name="fragment_login_password_hint">Ingresar password</string>
    <string name="fragment_login_accept">Login</string>
</resources>
